syntax = "proto3";

option csharp_namespace = "IoTClient.gRPC";
import "google/protobuf/timestamp.proto";

package message;

service IoTMessage {
  rpc Send (EdgeRequest) returns (EdgeResponse);
}

message EdgeRequest {
  string data = 1;
  google.protobuf.Timestamp _sendTime=2;
}

message EdgeResponse {
  google.protobuf.Timestamp _receivedTime=1;
}
